<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"

    >

    <group android:checkableBehavior="single">
        <item
            android:actionLayout="@layout/fragment_home"
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:actionLayout="@layout/fragment_profile"
            android:id="@+id/nav_profile"
            android:icon="@drawable/user"
            android:title="@string/profile" />
        <item
            android:actionLayout="@layout/fragment_category"
            android:id="@+id/nav_category"
            android:icon="@drawable/category"
            android:title="@string/category" />

        <item
            android:actionLayout="@layout/fragment_offeres"
            android:id="@+id/nav_offers"
            android:icon="@drawable/offer"
            android:title="@string/offers" />
        <item
            android:actionLayout="@layout/fragment_new_products"
            android:id="@+id/nav_newproducts"
            android:icon="@drawable/newproduct"
            android:title="@string/new_products"/>
        <item
            android:actionLayout="@layout/fragment_my_orders"
            android:id="@+id/nav_myorderes"
            android:icon="@drawable/order"
            android:title="@string/my_orders"/>
        <item
            android:actionLayout="@layout/fragment_my_carts"
            android:id="@+id/nav_mycarts"
            android:icon="@drawable/shoppingcart"
            android:title="@string/my_carts" />

    </group>
</menu>