<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
   >
    <TextView
        android:textColor="#5B5B66"
        android:layout_marginTop="20dp"
        android:id="@+id/signup_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/log_in__3"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_background"
        android:fontFamily="@font/segoe_ui"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="18dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_header" />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/password_field"
        app:layout_constraintTop_toBottomOf="@id/email_field"
        android:fontFamily="@font/segoe_ui"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="18dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/edittext_background" />

    <Button
        android:onClick="goto_sign_in"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/password_field"
        android:id="@+id/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/segoe_ui"
        android:padding="15dp"
        android:text="@string/log_in__5"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="277dp"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:id="@+id/aleady_account_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account__ef"
        android:fontFamily="@font/segoe_ui"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in" />

    <TextView
        android:onClick="goto_sign_up"
        android:textStyle="italic"
        android:id="@+id/sign_in_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/sign_up__bsevf"
        android:textColor="#5B5B66"
        android:textSize="21sp"
        app:layout_constraintStart_toEndOf="@+id/aleady_account_check"
        app:layout_constraintTop_toBottomOf="@+id/log_in"
        tools:ignore="UsingOnClickInXml" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in" />


</androidx.constraintlayout.widget.ConstraintLayout>